fix login btn covered problem

--- a/app/css/Login/login.scss
+++ b/app/css/Login/login.scss
@@ -3,6 +3,7 @@
 .login-btn{
     position: fixed;
     right: 10px;
+    z-index: 4;
 }
 
 aside.login-form{
